--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.0.5",
